# eazi_dw2_ss26

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
apps/alt/: package.json
apps/alt/src/app/: page.tsx
apps/led/: .env.example  README.md  next.config.ts
apps/led/public/: manifest.json
apps/led/src/app/: globals.css  layout.tsx
apps/led/src/components/: DisclosureArrow.tsx  Header.tsx  StripControls.tsx
apps/mvg/public/: manifest.json
apps/mvg/src/app/: globals.css  page.tsx
firmware/: README.md  mock-server.js
firmware/led-controller/: led-controller.ino  platformio.ini  ui.h
firmware/led-test/: led-test.ino  platformio.ini
led_control_ui/: README.md  eslint.config.mjs  package.json
led_control_ui/src/app/: page.tsx
led_control_ui/src/components/: ConnectionStatus.tsx  CycleButton.tsx  StripControls.tsx
src/gemma_api/: __init__.py  cli.py  config.py  platform.py  server.py  ui.py
ui/: package.json
ui-alt/: package-lock.json  package.json
ui-alt/src/app/: globals.css  layout.tsx  page.tsx
ui-alt/src/components/: WebcamCapture.tsx
ui-mvg/: package-lock.json
ui-mvg/src/app/: layout.tsx  page.tsx
ui-mvg/src/components/: DetectionBanner.tsx  Header.tsx
ui/src/app/: page.tsx
ui/src/components/: AlternativeRoute.tsx  ConnectionStatus.tsx  ElevatorStatus.tsx
ui_exploration/alt/public/: manifest.json
ui_exploration/alt/src/app/: layout.tsx
ui_exploration/mvg/: next.config.ts  package.json
ui_exploration/mvg/src/app/: layout.tsx
ui_exploration/shared/src/: index.ts
(+5 files in other folders)
