[project]
name = "gemma-api"
version = "0.1.0"
description = "Simple API server for Gemma 4 E4B with full text/image/video/audio support"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gemma-api" }]
readme = "README.md"

dependencies = [
    "click>=8.1",
    "mlx-vlm>=0.5.0",
    "gradio>=4.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
gemma-api = "gemma_api.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
cuda = [
    "mlx-vlm[cuda]>=0.5.0",
    "torch>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
